--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build with Maven
-        run: mvn package -DskipTests  # Optionally add -DskipTests to skip tests
+        run: mvn package -DskipTests
 
       - name: Build and test with Maven
         run: mvn -B package
